--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - He’s such a superfan @ItalianBach #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Gyana Yoga as a Path to Inner Freedom</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GTA BUT THE CAR GETS FASTER EVERY LAP</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Success: My 5-Year Strategy Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5842,7 +5842,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Success: My 5-Year Strategy Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Gyana Yoga as a Path to Inner Freedom</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8894,7 +8894,7 @@
                         <div class="video-info">
                             <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - He’s such a superfan @ItalianBach #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GTA BUT THE CAR GETS FASTER EVERY LAP</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
